--- a/css/style.css
+++ b/css/style.css
@@ -816,6 +816,9 @@ h1 {
 .item7 { grid-column: span 1; grid-row: span 2; }
 .item8 { grid-column: span 1; grid-row: span 2; }
 .item9 { grid-column: span 2; grid-row: span 2; }
+.item10 { grid-column: span 1; grid-row: span 2; }
+.item11 { grid-column: span 1; grid-row: span 2; }
+.item12 { grid-column: span 1; grid-row: span 2; }
 
 /* Adaptación para pantallas medianas */
 @media (max-width: 768px) {
